--- a/.travis.yml
+++ b/.travis.yml
@@ -62,7 +62,7 @@ script:
   - sh -c "if [ '$NOTESTS' != '1' ]; then phpBB/vendor/bin/phpunit --configuration phpBB/ext/$EXTNAME/travis/phpunit-$DB-travis.xml --bootstrap ./tests/bootstrap.php --coverage-clover phpBB/ext/$EXTNAME/clover.xml; fi"
 
 after_script:
-  - sh -c "if [ '$CODACY' = '1' ]; then php phpBB/vendor/bin/codacycoverage clover phpBB/ext/$EXTNAME/clover.xml; fi"
+  - sh -c "if [ '$CODACY' = '1' ]; then php phpBB/vendor/bin/codacycoverage --git-commit=$TRAVIS_COMMIT clover phpBB/ext/$EXTNAME/clover.xml; fi"
 
 after_success:
-  - bash -c "if [ '$CODECOV' = '1' ]; then bash <(curl -s https://codecov.io/bash); fi"
+  - bash -c "if [ '$CODECOV' = '1' ]; then cd phpBB/ext/$EXTNAME; bash <(curl -s https://codecov.io/bash); cd ../../..; fi"
