--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ matrix:
     - php: 5.5
       env: DB=none;NOTESTS=1
     - php: 5.4
-      env: DB=mysqli # MyISAM
+      env: DB=mysqli
     - php: 5.4
       env: DB=mysql
     - php: 5.4
@@ -20,6 +20,10 @@ matrix:
     - php: 5.6
       env: DB=mysqli
     - php: 7.0
+      env: DB=mysqli
+    - php: 7.1
+      env: DB=mysqli
+    - php: 7.2
       env: DB=mysqli
     - php: 7.1
       env: DB=mysqli;CODACY=1
@@ -59,10 +63,10 @@ script:
   - sh -c "if [ '$SNIFF' != '0' ]; then travis/ext-sniff.sh $DB $TRAVIS_PHP_VERSION $EXTNAME $NOTESTS; fi"
   - sh -c "if [ '$IMAGE_ICC' != '0' ]; then travis/check-image-icc-profiles.sh $DB $TRAVIS_PHP_VERSION $NOTESTS; fi"
   - sh -c "if [ '$EPV' != '0' -a '$NOTESTS' = '1' ]; then phpBB/vendor/bin/EPV.php run --dir='phpBB/ext/$EXTNAME/'; fi"
-  - sh -c "if [ '$NOTESTS' != '1' ]; then phpBB/vendor/bin/phpunit --configuration phpBB/ext/$EXTNAME/travis/phpunit-$DB-travis.xml --bootstrap ./tests/bootstrap.php --coverage-clover phpBB/ext/$EXTNAME/clover.xml; fi"
+  - sh -c "if [ '$NOTESTS' != '1' ]; then phpBB/vendor/bin/phpunit --configuration phpBB/ext/$EXTNAME/travis/phpunit-$DB-coverage.xml --bootstrap ./tests/bootstrap.php --coverage-clover phpBB/ext/$EXTNAME/clover.xml; fi"
 
 after_script:
   - sh -c "if [ '$CODACY' = '1' ]; then php phpBB/vendor/bin/codacycoverage --git-commit=$TRAVIS_COMMIT clover phpBB/ext/$EXTNAME/clover.xml; fi"
 
 after_success:
-  - bash -c "if [ '$CODECOV' = '1' ]; then cd phpBB/ext/$EXTNAME; bash <(curl -s https://codecov.io/bash); cd ../../..; fi"
+  - bash -c "if [ '$CODECOV' = '1' ]; then cd phpBB/ext/$EXTNAME; bash <(curl -s https://codecov.io/bash); cd ../../../..; fi"
