--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,9 @@ matrix:
     - php: 7.0
       env: DB=mysqli
     - php: 7.1
-      env: DB=mysqli;CODACY=1
+      env: DB=mysqli
     - php: 7.2
-      env: DB=mysqli;CODECOV=1
+      env: DB=mysqli
   #   - php: 7.3
   #     env: DB=mysqli
   # allow_failures:
@@ -50,7 +50,6 @@ install:
   - travis/prepare-extension.sh $EXTNAME $PHPBB_BRANCH
   - travis/setup-phpbb.sh $DB $TRAVIS_PHP_VERSION $NOTESTS
   - sh -c "if [ '$EPV' = '1' -a '$NOTESTS' = '1' ]; then cd phpBB; composer remove sami/sami --dev --no-interaction; composer require phpbb/epv:dev-master --dev --no-interaction --ignore-platform-reqs; cd ../; fi"
-  - sh -c "if [ '$CODACY' = '1' ]; then cd phpBB; composer require codacy/coverage:dev-master --dev --no-interaction; cd ../; fi"
 
 before_script:
   - travis/setup-database.sh $DB $TRAVIS_PHP_VERSION $NOTESTS
@@ -60,10 +59,3 @@ script:
   - sh -c "if [ '$IMAGE_ICC' != '0' ]; then travis/check-image-icc-profiles.sh $DB $TRAVIS_PHP_VERSION $NOTESTS; fi"
   - sh -c "if [ '$EPV' != '0' -a '$NOTESTS' = '1' ]; then phpBB/vendor/bin/EPV.php run --dir='phpBB/ext/$EXTNAME/'; fi"
   - sh -c "if [ '$NOTESTS' != '1' ]; then phpBB/vendor/bin/phpunit --configuration phpBB/ext/$EXTNAME/travis/phpunit-$DB-coverage.xml --bootstrap ./tests/bootstrap.php --coverage-clover phpBB/ext/$EXTNAME/clover.xml; fi"
-
-after_script:
-  - sh -c "if [ '$CODACY' = '1' ]; then php phpBB/vendor/bin/codacycoverage --git-commit=$TRAVIS_COMMIT clover phpBB/ext/$EXTNAME/clover.xml; fi"
-
-after_success:
-  - cp phpBB/ext/$EXTNAME/codecov.yml ./
-  - bash -c "if [ '$CODECOV' = '1' ]; then cd phpBB/ext/$EXTNAME; bash <(curl -s https://codecov.io/bash); cd ../../../..; fi"
