--- a/.gitattributes
+++ b/.gitattributes
@@ -4,10 +4,10 @@
 .gitignore	export-ignore
 .travis.yml		export-ignore
 clean_chmod.sh		export-ignore
-codecov.yml		export-ignore
 composer.lock		export-ignore
 phpunit.xml		export-ignore
 README.md		export-ignore
+sonar-project.properties	export-ignore
 travis			export-ignore
 tests			export-ignore
 vendor			export-ignore
