--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ matrix:
     - php: 5.6
       env: DB=mysqli
     - php: 7.0
-      env: DB=mysqli
+      env: DB=mysqli;SONAR=1
     - php: 7.1
       env: DB=mysqli
     - php: 7.2
@@ -30,6 +30,10 @@ matrix:
   # allow_failures:
   #   - php: 7.3
   fast_finish: true
+
+addons:
+  sonarcloud:
+    organization: "gouarfig-github"
 
 env:
   global:
@@ -59,3 +63,6 @@ script:
   - sh -c "if [ '$IMAGE_ICC' != '0' ]; then travis/check-image-icc-profiles.sh $DB $TRAVIS_PHP_VERSION $NOTESTS; fi"
   - sh -c "if [ '$EPV' != '0' -a '$NOTESTS' = '1' ]; then phpBB/vendor/bin/EPV.php run --dir='phpBB/ext/$EXTNAME/'; fi"
   - sh -c "if [ '$NOTESTS' != '1' ]; then phpBB/vendor/bin/phpunit --configuration phpBB/ext/$EXTNAME/travis/phpunit-$DB-coverage.xml --bootstrap ./tests/bootstrap.php --coverage-clover phpBB/ext/$EXTNAME/clover.xml; fi"
+
+after_script:
+  - sh -c "if [ '$SONAR' == '1' ]; then cd phpBB/ext/$EXTNAME/; sonar-scanner; cd ../../../../; fi"
