--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ sudo: required
 
 matrix:
   include:
-    - php: 5.5
-      env: DB=none;NOTESTS=1
+    - php: 5.6
+      env: DB=none;NOTESTS=1;SONAR=1
     - php: 5.4
       env: DB=mysqli
     - php: 5.4
@@ -20,7 +20,7 @@ matrix:
     - php: 5.6
       env: DB=mysqli
     - php: 7.0
-      env: DB=mysqli;SONAR=1
+      env: DB=mysqli
     - php: 7.1
       env: DB=mysqli
     - php: 7.2
@@ -65,4 +65,4 @@ script:
   - sh -c "if [ '$NOTESTS' != '1' ]; then phpBB/vendor/bin/phpunit --configuration phpBB/ext/$EXTNAME/travis/phpunit-$DB-coverage.xml --bootstrap ./tests/bootstrap.php --coverage-clover phpBB/ext/$EXTNAME/clover.xml; fi"
 
 after_script:
-  - sh -c "if [ '$SONAR' == '1' ]; then cd phpBB/ext/$EXTNAME/; sonar-scanner; cd ../../../../; fi"
+  - sh -c "if [ '$SONAR' = '1' ]; then cd phpBB/ext/$EXTNAME/; sonar-scanner; cd ../../../../; fi"
