--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,18 @@ sudo: required
 matrix:
   include:
     - php: 5.6
-      env: DB=none;NOTESTS=1;SONAR=1
+      env: DB=none;NOTESTS=1
     - php: 5.4
+      env: DB=mysqli
+    - php: 5.5
+      env: DB=mysqli
+    - php: 5.6
+      env: DB=mysqli
+    - php: 7.0
+      env: DB=mysqli;SONAR=1
+    - php: 7.1
+      env: DB=mysqli
+    - php: 7.2
       env: DB=mysqli
     - php: 5.4
       env: DB=mysql
@@ -15,16 +25,6 @@ matrix:
       env: DB=postgres
     - php: 5.4
       env: DB=sqlite3
-    - php: 5.5
-      env: DB=mysqli
-    - php: 5.6
-      env: DB=mysqli
-    - php: 7.0
-      env: DB=mysqli
-    - php: 7.1
-      env: DB=mysqli
-    - php: 7.2
-      env: DB=mysqli
   #   - php: 7.3
   #     env: DB=mysqli
   # allow_failures:
@@ -62,7 +62,7 @@ script:
   - sh -c "if [ '$SNIFF' != '0' ]; then travis/ext-sniff.sh $DB $TRAVIS_PHP_VERSION $EXTNAME $NOTESTS; fi"
   - sh -c "if [ '$IMAGE_ICC' != '0' ]; then travis/check-image-icc-profiles.sh $DB $TRAVIS_PHP_VERSION $NOTESTS; fi"
   - sh -c "if [ '$EPV' != '0' -a '$NOTESTS' = '1' ]; then phpBB/vendor/bin/EPV.php run --dir='phpBB/ext/$EXTNAME/'; fi"
-  - sh -c "if [ '$NOTESTS' != '1' ]; then phpBB/vendor/bin/phpunit --configuration phpBB/ext/$EXTNAME/travis/phpunit-$DB-coverage.xml --bootstrap ./tests/bootstrap.php --coverage-clover phpBB/ext/$EXTNAME/clover.xml; fi"
+  - sh -c "if [ '$NOTESTS' != '1' ]; then phpBB/vendor/bin/phpunit --configuration phpBB/ext/$EXTNAME/travis/phpunit-$DB-coverage.xml --bootstrap ./tests/bootstrap.php --log-junit phpBB/ext/$EXTNAME/phpunit.xml --coverage-clover phpBB/ext/$EXTNAME/phpunit.coverage.xml; fi"
 
 after_script:
   - sh -c "if [ '$SONAR' = '1' ]; then cd phpBB/ext/$EXTNAME/; sonar-scanner; cd ../../../../; fi"
