--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,6 +8,12 @@ sonar.projectVersion=0.5.1
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set. 
 sonar.sources=.
+sonar.tests=./tests/
+sonar.exclusions=./language/, ./vendor/
  
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
+
+# phpunit tests and code coverage
+sonar.php.coverage.reportPath=./phpunit.coverage.xml
+sonar.php.tests.reportPath=./phpunit.xml
