--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.host.url=https://sonarcloud.io
 sonar.projectKey=gouarfig_board-notices
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
 sonar.projectName=Board Notices Manager for phpBB 3.2
-sonar.projectVersion=0.5.1
+sonar.projectVersion=0.5.2-beta
  
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set. 
