--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,9 @@ matrix:
   #   - php: 7.3
   fast_finish: true
 
+services:
+  - mysql
+
 addons:
   sonarcloud:
     organization: "gouarfig-github"
