--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,6 @@ matrix:
     - php: 5.6
       env: DB=mysql
     - php: 5.6
-      env: DB=mariadb
-    - php: 5.6
       env: DB=postgres
     - php: 5.6
       env: DB=sqlite3
@@ -31,6 +29,9 @@ services:
 addons:
   sonarcloud:
     organization: "gouarfig-github"
+
+git:
+  depth: false
 
 env:
   global:
