--- a/config/services.yml
+++ b/config/services.yml
@@ -223,7 +223,7 @@ services:
     class: fq\boardnotices\rules\has_not_posted_for
     arguments:
       - '@fq.boardnotices.service.serializer'
-      - '@user'
+      - '@fq.boardnotices.service.phpbb.api'
 
   fq.boardnotices.rules.has_never_visited:
     class: fq\boardnotices\rules\has_never_visited
